<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textAlignment="textEnd"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"

        />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/clear"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"

        />

    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/backspace"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@+id/clear"
        />

    <Button
        android:id="@+id/button7"
        android:layout_height="85dp"
        android:layout_width="100dp"
        android:text="@string/seven"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/eight"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@id/button7"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/nine"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@id/button8"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/buttonsum"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/plus"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/four"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/five"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@id/button4"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/six"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@id/button4"
        android:layout_marginLeft="5dp"
        />


    <Button
        android:id="@+id/buttonsub"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/minus"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@id/button4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/one"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/two"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@id/button1"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/three"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@id/button1"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/buttondiv"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/slash"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@id/button1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/dot"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/zero"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/buttonequ"
        android:layout_width="100dp"
        android:layout_height="85dp"
        android:text="@string/Equal"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        android:layout_marginLeft="5dp"
        />

    <Button
        android:id="@+id/buttonmul"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/mul"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/buttonequ"
        app:layout_constraintTop_toTopOf="@+id/buttonDot" />

</androidx.constraintlayout.widget.ConstraintLayout>